--- a/Melodify/src/main/resources/application.properties
+++ b/Melodify/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/melodify
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=postgresql
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/melodify
+#spring.datasource.username=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database=mysql
+#spring.jpa.show-sql=true
+#spring.jpa.open-in-view=true
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
